--- a/res/values-ml-rIN/strings.xml
+++ b/res/values-ml-rIN/strings.xml
@@ -121,7 +121,7 @@
     <string name="description_video_call" msgid="2933838090743214204">"വീഡിയോ കോൾ."</string>
     <string name="description_send_text_message" msgid="7803126439934046891">"<xliff:g id="NAME">%1$s</xliff:g> എന്നതിലേക്ക് വാചക സന്ദേശം അയയ്‌ക്കുക"</string>
     <string name="description_call_log_unheard_voicemail" msgid="118101684236996786">"കേൾക്കാത്ത വോയ്‌സ്‌മെയിൽ"</string>
-    <string name="description_start_voice_search" msgid="520539488194946012">"വോയ്‌സ് തിരയൽ ആരംഭിക്കുക"</string>
+    <string name="description_start_voice_search" msgid="520539488194946012">"ശബ്ദ തിരയൽ ആരംഭിക്കുക"</string>
     <string name="menu_callNumber" msgid="997146291983360266">"<xliff:g id="NUMBER">%s</xliff:g> എന്നതിൽ വിളിക്കുക"</string>
     <string name="unknown" msgid="740067747858270469">"അജ്ഞാതം"</string>
     <string name="voicemail" msgid="3851469869202611441">"വോയ്‌സ്‌മെയിൽ"</string>
@@ -132,14 +132,14 @@
     <string name="callDetailsDurationFormat" msgid="8157706382818184268">"<xliff:g id="MINUTES">%s</xliff:g> മിനിറ്റ് <xliff:g id="SECONDS">%s</xliff:g> സെക്കൻഡ്"</string>
     <string name="dialog_phone_call_prohibited_message" msgid="6554711866586660441">"കോൾ ചെയ്യാനായില്ല"</string>
     <string name="dialog_voicemail_not_ready_message" msgid="4384716252789515378">"വോയ്‌സ്‌മെയിൽ സജ്ജീകരിക്കുന്നതിന്, മെനു &gt; ക്രമീകരണങ്ങൾ എന്നതിലേക്ക് പോകുക."</string>
-    <string name="dialog_voicemail_airplane_mode_message" msgid="530922773669546093">"വോയ്‌സ്‌മെയിൽ വിളിക്കാൻ ആദ്യം വിമാന മോഡ് ഓഫാക്കുക."</string>
+    <string name="dialog_voicemail_airplane_mode_message" msgid="530922773669546093">"വോയ്‌സ്‌മെയിൽ വിളിക്കാൻ ആദ്യം ഫ്ലൈറ്റ് മോഡ് ഓഫാക്കുക."</string>
     <string name="contact_list_loading" msgid="5488620820563977329">"ലോഡുചെയ്യുന്നു..."</string>
     <string name="imei" msgid="3045126336951684285">"IMEI"</string>
     <string name="meid" msgid="6210568493746275750">"MEID"</string>
-    <string name="simContacts_emptyLoading" msgid="6700035985448642408">"SIM കാർഡിൽ നിന്നും ലോഡുചെയ്യുന്നു…"</string>
-    <string name="simContacts_title" msgid="27341688347689769">"SIM കാർഡ് കോൺടാക്റ്റുകൾ"</string>
+    <string name="simContacts_emptyLoading" msgid="6700035985448642408">"സിം കാർഡിൽ നിന്നും ലോഡുചെയ്യുന്നു…"</string>
+    <string name="simContacts_title" msgid="27341688347689769">"സിം കാർഡ് കോൺടാക്റ്റുകൾ"</string>
     <string name="add_contact_not_available" msgid="2731922990890769322">"ഈ സവിശേഷത ഉപയോഗിക്കാൻ കോൺടാക്‌റ്റുകളുടെ അപ്ലിക്കേഷൻ വീണ്ടും പ്രവർത്തനക്ഷമമാക്കുക."</string>
-    <string name="voice_search_not_available" msgid="7580616740587850828">"വോയ്‌സ് തിരയൽ ലഭ്യമല്ല."</string>
+    <string name="voice_search_not_available" msgid="7580616740587850828">"ശബ്ദ തിരയൽ ലഭ്യമല്ല."</string>
     <string name="call_not_available" msgid="8941576511946492225">"ഫോൺ അപ്ലിക്കേഷൻ പ്രവർത്തനരഹിതമാക്കിയിരിക്കുന്നതിനാൽ ഫോൺ കോൾ ചെയ്യാനാകില്ല."</string>
     <string name="activity_not_available" msgid="8265265380537872585">"തിരഞ്ഞെടുത്ത പ്രവർത്തനം കൈകാര്യം ചെയ്യാൻ ഇൻസ്‌റ്റാളുചെയ്‌ത പ്രവർത്തനമൊന്നും ലഭ്യമല്ല."</string>
     <string name="dialer_hint_find_contact" msgid="8798845521253672403">"ഒരു പേരോ ഫോൺ നമ്പറോ ടൈപ്പുചെയ്യുക"</string>
@@ -160,7 +160,7 @@
     <string name="search_shortcut_make_video_call" msgid="1265971685034465166">"വീഡിയോ കോൾ ചെയ്യുക"</string>
     <string name="recents_footer_text" msgid="7315554578957453359">"മുഴുവൻ കോൾ ചരിത്രവും കാണുക"</string>
     <string name="num_missed_calls" msgid="8081736535604293886">"<xliff:g id="NUMBER">%s</xliff:g> പുതിയ മിസ്‌ഡ് കോളുകൾ"</string>
-    <string name="speed_dial_empty" msgid="5476435149276295630">"നിങ്ങൾ പതിവായി വിളിക്കുന്ന \nപ്രിയപ്പെട്ടവയ്‌ക്കും നമ്പറുകൾക്കുമായുള്ള\n വൺ ടച്ച് ഡയലിംഗാണ് സ്‌പീഡ് ഡയൽ."</string>
+    <string name="speed_dial_empty" msgid="5476435149276295630">"നിങ്ങൾ പതിവായി വിളിക്കുന്ന \nനമ്പറുകൾക്കുള്ള\n വൺ ടച്ച് ഡയലിംഗാണ് സ്‌പീഡ് ഡയൽ."</string>
     <string name="all_contacts_empty" msgid="4536082452651392894">"നിങ്ങൾക്ക് കോൺടാക്‌റ്റുകളൊന്നുമില്ല."</string>
     <string name="contact_tooltip" msgid="7817483485692282287">"എല്ലാ നമ്പറുകളും കാണാൻ ചിത്രം ടാപ്പുചെയ്യുക അല്ലെങ്കിൽ പുനഃക്രമീകരിക്കാൻ അമർത്തിപ്പിടിക്കുക"</string>
     <string name="description_dismiss" msgid="2146276780562549643">"നിരസിക്കുക"</string>
