--- a/res/values-ta-rIN/strings.xml
+++ b/res/values-ta-rIN/strings.xml
@@ -18,8 +18,8 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="applicationLabel" msgid="8490255569343340580">"டயலர்"</string>
-    <string name="launcherDialer" msgid="8636288196618486553">"மொபைல்"</string>
-    <string name="dialerIconLabel" msgid="6500826552823403796">"மொபைல்"</string>
+    <string name="launcherActivityLabel" msgid="1129729740601172692">"ஃபோன்"</string>
+    <string name="dialerIconLabel" msgid="6500826552823403796">"ஃபோன்"</string>
     <string name="recentCallsIconLabel" msgid="1419116422359067949">"அழைப்புப் பதிவு"</string>
     <string name="menu_sendTextMessage" msgid="6937343460284499306">"உரைச் செய்தியை அனுப்பு"</string>
     <string name="recentCalls_callNumber" msgid="1756372533999226126">"<xliff:g id="NAME">%s</xliff:g> ஐ அழை"</string>
@@ -83,7 +83,7 @@
     <string name="description_playback_seek" msgid="4509404274968530055">"பிளேபேக் நிலையைத் தேடு"</string>
     <string name="description_rate_decrease" msgid="3161652589401708284">"பிளேபேக் விகிதத்தைக் குறை"</string>
     <string name="description_rate_increase" msgid="6324606574127052385">"பிளேபேக் விகிதத்தை அதிகரி"</string>
-    <string name="action_menu_call_history_description" msgid="9018442816219748968">"அழைப்பு வரலாறு"</string>
+    <string name="action_menu_call_history_description" msgid="9018442816219748968">"அழைப்பு பட்டியல்"</string>
     <string name="action_menu_overflow_description" msgid="2303272250613084574">"மேலும் விருப்பங்கள்"</string>
     <string name="action_menu_dialpad_button" msgid="1425910318049008136">"டயல்பேடு"</string>
     <string name="menu_copy" msgid="6108677035381940698">"நகலெடு"</string>
@@ -136,9 +136,9 @@
     <string name="contact_list_loading" msgid="5488620820563977329">"ஏற்றுகிறது..."</string>
     <string name="imei" msgid="3045126336951684285">"IMEI"</string>
     <string name="meid" msgid="6210568493746275750">"MEID"</string>
-    <string name="simContacts_emptyLoading" msgid="6700035985448642408">"SIM கார்டிலிருந்து ஏற்றுகிறது…"</string>
-    <string name="simContacts_title" msgid="27341688347689769">"SIM கார்டின் தொடர்புகள்"</string>
-    <string name="add_contact_not_available" msgid="1419207765446461366">"அம்சத்தைப் பயன்படுத்த நபர்கள் பயன்பாட்டை மீண்டும் இயக்கவும்."</string>
+    <string name="simContacts_emptyLoading" msgid="6700035985448642408">"சிம் கார்டிலிருந்து ஏற்றுகிறது…"</string>
+    <string name="simContacts_title" msgid="27341688347689769">"சிம் கார்டின் தொடர்புகள்"</string>
+    <string name="add_contact_not_available" msgid="2731922990890769322">"இந்த அம்சத்தைப் பயன்படுத்த, தொடர்புகள் பயன்பாட்டை மீண்டும் இயக்கவும்."</string>
     <string name="voice_search_not_available" msgid="7580616740587850828">"வீடியோ தேடல் இல்லை."</string>
     <string name="call_not_available" msgid="8941576511946492225">"Phone பயன்பாடு முடக்கப்பட்டுள்ளதால், ஃபோன் அழைப்பைச் செய்ய முடியாது."</string>
     <string name="activity_not_available" msgid="8265265380537872585">"தேர்ந்தெடுத்த செயலைச் செய்வதற்கான நிறுவப்பட்ட செயல்பாடு எதுவுமில்லை."</string>
@@ -158,9 +158,9 @@
     <string name="search_shortcut_call_number" msgid="7277194656832895870">"<xliff:g id="NUMBER">%s</xliff:g> ஐ அழை"</string>
     <string name="search_shortcut_add_to_contacts" msgid="1853716708655789069">"தொடர்புகளில் சேர்"</string>
     <string name="search_shortcut_make_video_call" msgid="1265971685034465166">"வீடியோவில் அழை"</string>
-    <string name="recents_footer_text" msgid="7315554578957453359">"அழைப்பு வரலாறு முழுவதையும் காட்டு"</string>
+    <string name="recents_footer_text" msgid="7315554578957453359">"அழைப்பு பட்டியல் முழுவதையும் காட்டு"</string>
     <string name="num_missed_calls" msgid="8081736535604293886">"<xliff:g id="NUMBER">%s</xliff:g> புதிய தவறிய அழைப்புகள்"</string>
-    <string name="speed_dial_empty" msgid="5476435149276295630">"விரைவு டயல் என்பது நீங்கள் அடிக்கடி தொடர்புகொள்ளும்\nபிடித்தவை மற்றும் எண்களை\n ஒரு முறை தொடுவதன் மூலம் டயல் செய்யும் அம்சமாகும்."</string>
+    <string name="speed_dial_empty" msgid="5476435149276295630">"விரைவு டயல் என்பது நீங்கள் அடிக்கடி கூப்பிடும் \nஎண்களை\n ஒரு முறை தொடுவதன் மூலம் அழைக்கும் வசதியாகும்."</string>
     <string name="all_contacts_empty" msgid="4536082452651392894">"உங்களிடம் தொடர்புகள் எதுவுமில்லை."</string>
     <string name="contact_tooltip" msgid="7817483485692282287">"எல்லா எண்களையும் பார்க்க படத்தைத் தட்டவும் அல்லது மீண்டும் வரிசைப்படுத்த அழுத்திப் பிடிக்கவும்"</string>
     <string name="description_dismiss" msgid="2146276780562549643">"விலக்கு"</string>
@@ -182,7 +182,6 @@
     <string name="call_log_action_report" msgid="561229827189128879">"புகாரளி"</string>
     <string name="call_log_header_today" msgid="3225248682434212981">"இன்று"</string>
     <string name="call_log_header_yesterday" msgid="9139172458834033092">"நேற்று"</string>
-    <string name="call_log_header_last_week" msgid="5197040511028258038">"கடந்த வாரம்"</string>
     <string name="call_log_header_other" msgid="5769921959940709084">"பழையது"</string>
     <string name="call_detail_list_header" msgid="866455969433213220">"அழைப்பு பட்டியல்"</string>
     <string name="voicemail_speaker_on" msgid="209154030283487068">"ஸ்பீக்கரை இயக்கு."</string>
