--- a/InCallUI/res/values-in/strings.xml
+++ b/InCallUI/res/values-in/strings.xml
@@ -104,7 +104,7 @@
     <string name="onscreenHoldText" msgid="2285258239691145872">"Tahan"</string>
     <string name="onscreenEndCallText" msgid="4403855834875398585">"Akhiri"</string>
     <string name="onscreenShowDialpadText" msgid="8561805492659639893">"Dialpad"</string>
-    <string name="onscreenMuteText" msgid="5011369181754261374">"Bungkam"</string>
+    <string name="onscreenMuteText" msgid="5011369181754261374">"Bisukan"</string>
     <string name="onscreenAddCallText" msgid="5140385634712287403">"Tambahkan panggilan"</string>
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"Gabungkan panggilan"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"Tukar"</string>
