--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -526,6 +526,8 @@
          while the system isn't ready for the access. [CHAR LIMIT=NONE] -->
     <string name="dialog_voicemail_not_ready_message">To set up voicemail, go to Menu &gt; Settings.</string>
 
+    <string name="is_set_voicemail_number">No voicemail number is set up, set now?</string>
+
     <!-- Dialog message which is shown when the user tries to check voicemail
          while the system is in airplane mode. The user cannot access to
          voicemail service in Airplane mode. [CHAR LIMI=NONE] -->
