--- a/InCallUI/res/values-ko/strings.xml
+++ b/InCallUI/res/values-ko/strings.xml
@@ -73,7 +73,7 @@
     <string name="notification_action_answer_video" msgid="7809271910870211729">"동영상"</string>
     <string name="notification_action_answer_voice" msgid="1770796916369437773">"음성"</string>
     <string name="notification_action_accept" msgid="2898609801209468429">"수락"</string>
-    <string name="notification_action_dismiss" msgid="2679969397930852858">"해제"</string>
+    <string name="notification_action_dismiss" msgid="2679969397930852858">"거부"</string>
     <string name="notification_missedCall_call_back" msgid="2684890353590890187">"통화하기"</string>
     <string name="notification_missedCall_message" msgid="3049928912736917988">"문자 메시지"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"전화를 걸려면 먼저 비행기 모드를 해제하세요."</string>
@@ -136,7 +136,7 @@
     <string name="accessibility_call_unmuted" msgid="7496527089753980871">"통화가 음소거 해제되었습니다."</string>
     <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"통화 대기 중입니다."</string>
     <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"통화 대기가 해제되었습니다."</string>
-    <string name="description_target_answer" msgid="7205604197797472471">"답변"</string>
+    <string name="description_target_answer" msgid="7205604197797472471">"통화"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"SMS 보내기"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"거부"</string>
     <string name="description_target_answer_video_call" msgid="3495965588512395026">"화상 통화로 받기"</string>
